src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --lightest-grey: #CAC4D0;
  --light-grey: hsl(255, 7%, 29%);
  --lightish-grey: hsl(255, 7%, 16%);
  --grey: rgb(27, 26, 30);
  --opaque-trans-grey: rgb(49.88, 46.68, 58.05);
  --trans-light-grey: rgba(208, 188, 255, 0.3);
  --trans-grey: rgba(208, 188, 255, 0.11);
  --nav-grey: rgba(208, 188, 255, 0.08);
  --slate: #E8DEF8;
  --pink-slate: #F2B8B5;
  --pink: #D0BCFF;
  --dark-green: rgba(28, 27, 31, 1);
  --stripe: rgba(2, 40, 42, 0.979);
  --stripe-light: rgba(34, 72, 74, 0.8);
  --onDark: #E6E1E5;
}

/* * {
  border:#FF2F22 solid 2px;
} */

@media (prefers-color-scheme: dark) {
  :root {
    --lightest-grey: #CAC4D0;
    --light-grey: #49454F;
    --grey: #1C1B1F;
    --filterbar-grey: #2F2C37;
    --trans-light-grey: rgba(208, 188, 255, 0.3);
    --trans-grey: rgba(208, 188, 255, 0.11);
    --nav-grey: rgba(208, 188, 255, 0.08);
    --slate: #E8DEF8;
    --pink-slate: #F2B8B5;
    --pink: #D0BCFF;
    --dark-green: rgba(28, 27, 31, 1);
    --stripe: rgb(1, 40, 42);
    --stripe-light: rgba(34, 72, 74, 0.8);
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

body {
  color: var(--lightest-grey);
  /* background: var(--grey); */
  background: var(--grey);
}

.text-hover:hover {
  color: var(--pink);
  transition: all 0.3s ease-in-out;
  transform: translateY(-2px);
}

.grad-bg-text {
  /* background: linear-gradient(90deg,#a166ed,#5777ff); */
  background: linear-gradient(266.88deg, #FF2F22 0%, #E401A5 14.07%, #3B37FF 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent; 
  -moz-text-fill-color: transparent;
}

*:focus-visible {
  outline: none;  
  border: 2px dashed var(--pink);
  border-radius: 5px;
}

/* .Mui-focusVisible {
  outline: none;  
  border: 2px dashed var(--pink);
  border-radius: 5px;
}

.Mui-focused {
  outline: none;  
  border: 2px dashed var(--pink);
  border-radius: 5px;
} */

/* .Mui-selected {
  outline: none;  
  border: 2px dashed var(--pink);
  border-radius: 5px;
}

.Mui-active {
  outline: none;  
  border: 2px dashed var(--pink);
  border-radius: 5px;
} */

.MuiSelect-select:focus-visible {
  outline: none;  
  border: none;
  border-radius: 0;
}



::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-thumb {
  background: var(--light-grey);
  border-radius: 5px;
}

::-webkit-scrollbar-track {
  background: var(--grey);
}   

.font-museo {
  font-family: 'MuseoModerno', cursive;
  /* font-family: 'Comfortaa', cursive; */
}

.font-comfortaa {
  font-family: 'Comfortaa', cursive;
}

.boxshadow {
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
}

